<resources>
    <!--  Footer Text  -->
    <string name="footer_text">By: Grupo A</string>

    <!--  First Page  -->
    <string name="welcome_title"><u>Olá! Seja Bem Vindo ao <br /> Nosso App</u></string>
    <string name="cpf_cnpj_field_text">Informe seu <b><font color='#650199'>CPF</font></b> ou <b><font color='#650199'>CNPJ</font></b> para checarmos se já possui cadastro.</string>
    <string name="search_login_button_text">Consultar</string>

    <!--  Login Page  -->
    <string name="login_page_title"><u>Já Sou Cadastrado</u></string>
    <string name="login_page_email">E-mail</string>
    <string name="login_page_password">Senha</string>
    <string name="login_page_password_recover"><u>Esqueci minha senha</u></string>
    <string name="login_page_login">Acessar Conta</string>

    <!--  Registration Page  -->
    <string name="registration_page_title"><u>Primeiro Acesso</u></string>
    <string name="registration_page_name">Seu Nome</string>
    <string name="registration_page_email">Seu E-mail</string>
    <string name="registration_page_phone">Seu Telefone</string>
    <string name="registration_page_password">Senha</string>
    <string name="registration_page_type">Qual Plano deseja cadastrar?</string>
    <string name="registration_page_type_phone">Telefone</string>
    <string name="registration_page_type_internet">Internet</string>
    <string name="registration_page_type_combo">Combo</string>
    <string name="registration_page_save">Cadastrar</string>

    <!--  Recover Page  -->
    <string name="recover_password_page_title"><u>Esqueci a Senha</u></string>
    <string name="recover_password_page_pin">Digite o código aqui:</string>
    <string name="recover_password_page_resend">Receber Código</string>
    <string name="recover_password_page_confirm">Confirmar</string>

    <!--  Change Password Page  -->
    <string name="change_password_page_title"><u>Alterar Senha</u></string>
    <string name="change_password_new">Entre com a nova senha</string>
    <string name="change_password_new_confirm">Confirme a nova senha</string>
    <string name="change_password_new_save">Salvar</string>

    <!--  Dashboard Page  -->
    <string name="dashboard_page_welcome_title">Seja Bem-Vindo(a)</string>
    <string name="dashboard_page_button_logout">Sair</string>

    <string name="app_name">Vivo</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">CPF ou CNPJ</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="cpf_ou_cnpj">CPF ou CNPJ</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>