<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fiap.vivo.view.MainActivity"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:paddingHorizontal="15dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/default.layout.title"
            android:text="@string/welcome_title"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/default.layout.text"
            android:text="@string/cpf_cnpj_field_text"
            android:textAlignment="center"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@drawable/edit_text_background"
            android:inputType="number"
            android:padding="16dp" />

        <Button
            android:theme="@style/default.layout.button.primary"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/search_login_button_text" />

    </LinearLayout>

</RelativeLayout>