<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fiap.vivo.view.ThirdFragment">

    <TextView
        android:id="@+id/registrationPageTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registration_page_title"
        style="@style/default.layout.title"/>

    <TextView
        android:id="@+id/registrationCpfCnpj"
        android:layout_below="@id/registrationPageTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Cpf/Cnpj"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        style="@style/default.layout.title"/>

    <TextView
        android:id="@+id/registrationNameLabel"
        android:layout_below="@id/registrationCpfCnpj"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registration_page_name"
        style="@style/default.layout.text"/>

    <EditText
        android:id="@+id/registrationNameField"
        android:layout_below="@id/registrationNameLabel"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@drawable/edit_text_background"
        android:paddingHorizontal="16dp"
        android:paddingVertical="4dp"
        tools:ignore="TouchTargetSizeCheck"/>

    <TextView
        android:id="@+id/registrationEmailLabel"
        android:layout_below="@id/registrationNameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registration_page_email"
        style="@style/default.layout.text"/>

    <EditText
        android:id="@+id/registrationEmailField"
        android:layout_below="@id/registrationEmailLabel"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@drawable/edit_text_background"
        android:paddingHorizontal="16dp"
        android:paddingVertical="4dp"
        android:inputType="textEmailAddress"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/registrationPasswordLabel"
        android:layout_below="@id/registrationEmailField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registration_page_email"
        style="@style/default.layout.text"/>

    <EditText
        android:id="@+id/registrationPasswordField"
        android:layout_below="@id/registrationPasswordLabel"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@drawable/edit_text_background"
        android:inputType="textPassword"
        tools:ignore="TouchTargetSizeCheck"/>

    <Button
        android:id="@+id/registrationButtonSave"
        android:layout_below="@id/registrationPasswordField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registration_page_save"
        tools:ignore="TouchTargetSizeCheck"
        style="@style/default.layout.button.primary"/>

</RelativeLayout>